--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,7 @@
     tools:context=".MainActivity">
 
 
-    <TextView
-        android:id="@+id/GE"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="57dp"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="655dp"
-        android:text="Gestion des étudiants"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="MissingConstraints" />
+
 
     <Button
         android:id="@+id/ajouter"
@@ -32,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
         android:layout_marginTop="111dp"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="572dp"
         android:text="Ajouter étudiant"
@@ -43,6 +28,7 @@
     <Button
         android:id="@+id/afficher"
         android:onClick="afficher"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
