--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
     <Button
         android:id="@+id/ajouter"
         android:onClick="ajouter"
+        app:icon="@drawable/ic_add_24dp"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
